--- a/blogPessoal/src/main/resources/application.properties
+++ b/blogPessoal/src/main/resources/application.properties
@@ -1,5 +1,14 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:LocalHost}:3306/blog_pessoal_db?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database=mysql
+spring.datasource.url=jdbc:mysql://localhost/db_testeblogpessoal?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=false
 spring.datasource.username=root
 spring.datasource.password=1234
+
 spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=Brazil/East
+
+#server.port=8082
