--- a/blogPessoal/src/test/resources/application.properties
+++ b/blogPessoal/src/test/resources/application.properties
@@ -1,16 +1,14 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost/db_testeblogpessoal?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=false
 spring.datasource.username=root
 spring.datasource.password=1234
 
-spring.jpa.show-sql=true 	
+spring.jpa.show-sql=true
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=Brazil/East
 
-server.error.include-stacktrace=NEVER
-
-hibernate.globally_quoted_identifiers=true
+#server.port=8082
